--- a/aanestaja.html
+++ b/aanestaja.html
@@ -12,28 +12,17 @@
     <h1>Äänestäjän Sivut</h1>
   </header>
   <main class="container mt-5">
+    <div class="d-flex justify-content-start mb-4">
+      <a href="index.html" class="btn btn-secondary">← Takaisin</a>
+    </div>
     <h2 class="mb-4">Aktiviset äänestykset</h2>
-    <ul class="list-group">
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        Äänestys 1
-        <div>
-          <a href="aanestys1-tulokset.html" class="btn btn-info btn-sm me-2">Näytä tulokset</a>
-          <a href="aanestys1.html" class="btn btn-primary btn-sm">Äänestä</a>
-        </div>
-      </li>
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        Äänestys 2
-        <div>
-          <a href="aanestys2-tulokset.html" class="btn btn-info btn-sm me-2">Näytä tulokset</a>
-          <a href="aanestys2.html" class="btn btn-primary btn-sm">Äänestä</a>
-        </div>
-      </li>
-    </ul>
+    <ul class="list-group" id="votingList"></ul>
   </main>
   <footer class="bg-light text-center py-3 mt-5">
     <p>&copy; 2024 Äänestyssovellus</p>
   </footer>
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="voter.js"></script>
 </body>
 </html>
