--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container vh-100 d-flex justify-content-center align-items-center">
     <div class="text-center">
-      <h1 class="mb-4">Tervetuloa Marjatan äänestyssovellukseen</h1>
+      <h1 class="mb-4">Tervetuloa Marjatan Äänestyssovellukseen</h1>
       <p>Valitse käyttäjätyyppi jatkaaksesi:</p>
       <div class="mt-4">
         <a href="aanestaja.html" class="btn btn-primary btn-lg me-3">Olen äänestäjä</a>
