--- a/yllapitaja.html
+++ b/yllapitaja.html
@@ -12,10 +12,13 @@
     <h1>Ylläpitäjän Sivut</h1>
   </header>
   <main class="container mt-5">
+    <div class="d-flex justify-content-start mb-4">
+      <a href="index.html" class="btn btn-secondary">← Takaisin</a>
+    </div>
     <section class="mb-5">
       <h2 class="mb-4">Luo uusi äänestys</h2>
       <div class="card p-3">
-        <form action="#" method="POST">
+        <form id="createPollForm">
           <div class="mb-3">
             <label for="aanestysNimi" class="form-label">Äänestyksen nimi</label>
             <input type="text" id="aanestysNimi" class="form-control" placeholder="Kirjoita äänestyksen nimi">
@@ -29,17 +32,8 @@
       </div>
     </section>
     <section>
-      <h2 class="mb-4">Poista olemassa olevia äänestyksiä</h2>
-      <ul class="list-group">
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          Äänestys 1
-          <button class="btn btn-danger btn-sm">Poista</button>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          Äänestys 2
-          <button class="btn btn-danger btn-sm">Poista</button>
-        </li>
-      </ul>
+      <h2 class="mb-4">Olemassa olevat äänestykset</h2>
+      <ul class="list-group" id="pollList"></ul>
     </section>
   </main>
   <footer class="bg-light text-center py-3 mt-5">
@@ -47,5 +41,6 @@
   </footer>
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="admin.js"></script>
 </body>
 </html>
